--- a/portfolio-bootstrap/css/business-casual.css
+++ b/portfolio-bootstrap/css/business-casual.css
@@ -81,7 +81,7 @@ p {
 }
 
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: #dfc099;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -239,7 +239,7 @@ p {
 
 .btn {
   -webkit-box-shadow: 0px 3px 3px 0px rgba(33, 37, 41, 0.1);
-  box-shadow: 0px 3px 3px 0px rgba(33, 37, 41, 0.1);
+  box-shadow: 0px 3px 3px 0px #e6a756;
 }
 
 .btn-primary {
